trying to fix issue with ad icon visibility

--- a/Client/Content/app.css
+++ b/Client/Content/app.css
@@ -239,7 +239,7 @@
 
 .ad-container{
   display: block; 
-  background-color: rgb(206, 208, 209);
+  background-color: rgb(220, 221, 221);
   margin-left: 70px;
   margin-right: 70px;
   padding-top: 30px;
